# llm-tic-tac-toe

backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/api_player/: api_player.py
backend/logs/: logger.py
backend/routes/: play_azure.py  play_ollama.py
backend/test/: test_api.py
backend/utils/: azure_client.py  game_handler.py  models.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: config.js  main.js
